--- a/portfolio.html
+++ b/portfolio.html
@@ -244,8 +244,9 @@
         </ul>  
 </div> 
 <div class="foot-div">
-    <p class="text-input">подпишитесь на рассылку</p>
-    <form >
+    <p class="text-input">подпишитесь на рассылку</p> 
+
+    <form class="foot-form"> 
     <label> 
         <input type="email" class="foot-input" placeholder="E-mail">
     </label>
