--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <label class="label">
                        <span class="label-text"> Имя  </span>
                     <input type="name"  name="username" class="input">
-                    <svg wight="12px" height="12px" class="modal-icon">
+                    <svg width="12px" height="12px" class="modal-icon">
                         <use href="./image/sprite.svg#icon-Vector-7">
                         </use>
                     </svg>
@@ -72,7 +72,7 @@
                     <label class="label">
                        <span class="label-text"> Телефон  </span>
                     <input type="tel" name="tel" class="input">
-                    <svg wight="13px" height="13px" class="modal-icon">
+                    <svg width="13px" height="13px" class="modal-icon">
                         <use href="./image/sprite.svg#icon-Vector-8">
                         </use>
                     </svg>
@@ -81,7 +81,7 @@
                     <label class="label">
                         <span class="label-text"> Почта  </span>
                     <input type="email" name="email" class="input">
-                    <svg wight="15px" height="15px" class="modal-icon">
+                    <svg width="15px" height="15px" class="modal-icon">
                         <use href="./image/sprite.svg#icon-Vector-9">
                         </use>
                     </svg>
@@ -93,7 +93,7 @@
                     </textarea>
                 </label>
                 <label class="label-checkbox">
-                    <input type="checkbox" name="checkbox" class="checkbox">
+                    <input type="checkbox" name="agreement" class="checkbox">
                     <span class="checkbox-icon"></span>
                     Соглашаюсь с рассылкой и принимаю <a href="#" class="checkbox-link"> Условия договора </a>
                 </label>
@@ -164,7 +164,6 @@
         </p>
         </li> 
     </ul>
-    </div>
     </section>
 </div>     
 <section class="activity">
@@ -213,7 +212,7 @@
 <ul class="society">
     <li class="society-list">
         <a class="society-item" href="#">
-         <svg class="society-icon" wight="20px" height="20px">
+         <svg class="society-icon" width="20px" height="20px">
              <use href="./image/symbol-defs-3.svg#icon-instagram-2">    
              </use>
          </svg>
@@ -221,7 +220,7 @@
 </li>
     <li class="society-list">
         <a class="society-item" href="">
-            <svg class="society-icon" wight="20px" height="20px">
+            <svg class="society-icon" widht="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-twitter-1">    
                 </use>
             </svg>
@@ -229,7 +228,7 @@
     </li>
     <li class="society-list">
         <a class="society-item" href="">
-            <svg class="society-icon" wight="20px" height="20px">
+            <svg class="society-icon" width="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-facebook-1">    
                 </use>
             </svg>
@@ -237,7 +236,7 @@
     </li>
     <li class="society-list">
         <a class="society-item" href="">
-            <svg class="society-icon" wight="20px" height="20px">
+            <svg class="society-icon" width="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-linkedin-1">    
                 </use>
             </svg>
@@ -450,6 +449,7 @@
         </ul>
     </address>
 </div>
+</div>
 <div class="foot-svg">
     <p class="come">присоединяйтесь</p>
         <ul class="society-foot">
@@ -499,10 +499,9 @@
     </button>
 </form>
 </div>
-
-    </footer>
+</footer>
 <script src="./js/modal.js"></script>
-    </body>
+</body>
    
        
 
