--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 <ul class="society">
     <li class="society-list">
         <a class="society-item" href="#">
-         <svg class="society-icon" wight="20px" height="20px">
+         <svg class="society-icon" width="20px" height="20px">
              <use href="./image/symbol-defs-3.svg#icon-instagram-2">    
              </use>
          </svg>
@@ -264,7 +264,7 @@
 </li>
     <li class="society-list">
         <a class="society-item" href="">
-            <svg class="society-icon" wight="20px" height="20px">
+            <svg class="society-icon" width="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-twitter-1">    
                 </use>
             </svg>
@@ -272,7 +272,7 @@
     </li>
     <li class="society-list">
         <a class="society-item" href="">
-            <svg class="society-icon" wight="20px" height="20px">
+            <svg class="society-icon" width="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-facebook-1">    
                 </use>
             </svg>
@@ -280,7 +280,7 @@
     </li>
     <li class="society-list">
         <a class="society-item" href="">
-            <svg class="society-icon" wight="20px" height="20px">
+            <svg class="society-icon" width="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-linkedin-1">    
                 </use>
             </svg>
@@ -301,7 +301,7 @@
 <ul class="society">
     <li class="society-list">
         <a class="society-item" href="#">
-         <svg class="society-icon" wight="20px" height="20px">
+         <svg class="society-icon" width="20px" height="20px">
              <use href="./image/symbol-defs-3.svg#icon-instagram-2">    
              </use>
          </svg>
@@ -309,7 +309,7 @@
 </li>
     <li class="society-list">
         <a class="society-item" href="">
-            <svg class="society-icon" wight="20px" height="20px">
+            <svg class="society-icon" width="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-twitter-1">    
                 </use>
             </svg>
@@ -317,7 +317,7 @@
     </li>
     <li class="society-list">
         <a class="society-item" href="">
-            <svg class="society-icon" wight="20px" height="20px">
+            <svg class="society-icon" width="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-facebook-1">    
                 </use>
             </svg>
@@ -325,7 +325,7 @@
     </li>
     <li class="society-list">
         <a class="society-item" href="">
-            <svg class="society-icon" wight="20px" height="20px">
+            <svg class="society-icon" width="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-linkedin-1">    
                 </use>
             </svg>
@@ -347,7 +347,7 @@
 <ul class="society">
     <li class="society-list">
         <a class="society-item" href="#">
-         <svg class="society-icon" wight="20px" height="20px">
+         <svg class="society-icon" width="20px" height="20px">
              <use href="./image/symbol-defs-3.svg#icon-instagram-2">    
              </use>
          </svg>
@@ -355,7 +355,7 @@
 </li>
     <li class="society-list">
         <a class="society-item" href="#">
-            <svg class="society-icon" wight="20px" height="20px">
+            <svg class="society-icon" width="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-twitter-1">    
                 </use>
             </svg>
@@ -363,7 +363,7 @@
     </li>
     <li class="society-list">
         <a class="society-item" href="#">
-            <svg class="society-icon" wight="20px" height="20px">
+            <svg class="society-icon" width="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-facebook-1">    
                 </use>
             </svg>
@@ -371,7 +371,7 @@
     </li>
     <li class="society-list">
         <a class="society-item" href="#">
-            <svg class="society-icon" wight="20px" height="20px">
+            <svg class="society-icon" width="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-linkedin-1">    
                 </use>
             </svg>
@@ -455,7 +455,7 @@
         <ul class="society-foot">
             <li class="society-list">
                 <a class="society-item footer" href="#">
-                 <svg class="society-icon white" wight="20px" height="20px">
+                 <svg class="society-icon white" widht="20px" height="20px">
                      <use href="./image/symbol-defs-3.svg#icon-instagram-2">    
                      </use>
                  </svg>
@@ -463,7 +463,7 @@
         </li>
             <li class="society-list">
                 <a class="society-item footer" href="#">
-                    <svg class="society-icon white" wight="20px" height="20px">
+                    <svg class="society-icon white" width="20px" height="20px">
                         <use href="./image/symbol-defs-3.svg#icon-twitter-1">    
                         </use>
                     </svg>
@@ -471,7 +471,7 @@
             </li>
             <li class="society-list">
                 <a class="society-item footer" href="#">
-                    <svg class="society-icon white" wight="20px" height="20px">
+                    <svg class="society-icon white" width="20px" height="20px">
                         <use href="./image/symbol-defs-3.svg#icon-facebook-1">    
                         </use>
                     </svg>
@@ -479,7 +479,7 @@
             </li>
             <li class="society-list">
                 <a class="society-item footer" href="#">
-                    <svg class="society-icon white" wight="20px" height="20px">
+                    <svg class="society-icon white" width="20px" height="20px">
                         <use href="./image/symbol-defs-3.svg#icon-linkedin-1">    
                         </use>
                     </svg>
