--- a/portfolio.html
+++ b/portfolio.html
@@ -211,7 +211,7 @@
         <ul class="society-foot">
             <li class="society-list">
                 <a class="society-item footer" href="#">
-                 <svg class="society-icon white" wight="20px" height="20px">
+                 <svg class="society-icon white" width="20px" height="20px">
                      <use href="./image/symbol-defs-3.svg#icon-instagram-2">    
                      </use>
                  </svg>
@@ -219,7 +219,7 @@
         </li>
             <li class="society-list">
                 <a class="society-item footer" href="#">
-                    <svg class="society-icon white" wight="20px" height="20px">
+                    <svg class="society-icon white" width="20px" height="20px">
                         <use href="./image/symbol-defs-3.svg#icon-twitter-1">    
                         </use>
                     </svg>
@@ -227,7 +227,7 @@
             </li>
             <li class="society-list">
                 <a class="society-item footer" href="#">
-                    <svg class="society-icon white" wight="20px" height="20px">
+                    <svg class="society-icon white" width="20px" height="20px">
                         <use href="./image/symbol-defs-3.svg#icon-facebook-1">    
                         </use>
                     </svg>
@@ -235,7 +235,7 @@
             </li>
             <li class="society-list">
                 <a class="society-item footer" href="#">
-                    <svg class="society-icon white" wight="20px" height="20px">
+                    <svg class="society-icon white" width="20px" height="20px">
                         <use href="./image/symbol-defs-3.svg#icon-linkedin-1">    
                         </use>
                     </svg>
