--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 </li>
     <li class="society-list">
         <a class="society-item" href="">
-            <svg class="society-icon" widht="20px" height="20px">
+            <svg class="society-icon" width="20px" height="20px">
                 <use href="./image/symbol-defs-3.svg#icon-twitter-1">    
                 </use>
             </svg>
@@ -454,7 +454,7 @@
         <ul class="society-foot">
             <li class="society-list">
                 <a class="society-item footer" href="#">
-                 <svg class="society-icon white" widht="20px" height="20px">
+                 <svg class="society-icon white" width="20px" height="20px">
                      <use href="./image/symbol-defs-3.svg#icon-instagram-2">    
                      </use>
                  </svg>
