--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
                         <label class="label">
                        <span class="label-text"> Имя  </span>
-                    <input type="name"  name="username" class="input">
+                    <input type="name"  name="user_name" class="input">
                     <svg width="12px" height="12px" class="modal-icon">
                         <use href="./image/sprite.svg#icon-Vector-7">
                         </use>
@@ -89,7 +89,7 @@
              
                     <label class="label">
                         <span class="label-text"> Коментарий  </span>
-                    <textarea name="comments"  class="textarea" placeholder="Введите текст" class="textarea">
+                    <textarea name="comments" placeholder="Введите текст" class="textarea">
                     </textarea>
                 </label>
                 <label class="label-checkbox">
@@ -164,8 +164,9 @@
         </p>
         </li> 
     </ul>
+    </div>
     </section>
-</div>     
+   
 <section class="activity">
 <div class="conteiner">
     <h2 class="activity-title">
