--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
                         <label class="label">
                        <span class="label-text"> Имя  </span>
-                    <input type="name"  name="user_name" class="input">
+                    <input type="name"  name="username" class="input">
                     <svg width="12px" height="12px" class="modal-icon">
                         <use href="./image/sprite.svg#icon-Vector-7">
                         </use>
